@@ -1,3 +1,4 @@
+#include <cassert>
 #include <iostream>
 
 #include "pg_connection.h"
@@ -6,6 +7,20 @@
 
 using namespace PGSTD;
 using namespace Pg;
+
+
+// Define, locally but with C linkage, a function to process warnings
+// generated by the database connection.  This is optional.
+namespace
+{
+extern "C"
+{
+void ReportWarning(void *, const char msg[])
+{
+  cerr << msg;
+}
+}
+}
 
 
 // Simple test program for libpqxx.  Open connection to database, start
@@ -24,11 +39,34 @@ int main(int argc, char *argv[])
     // Set up a connection to the backend
     Connection C(argv[1] ? argv[1] : "");
 
+    // If connection failed, C's constructor would have thrown an exception
+    assert(C.IsOpen());
+
+    // Tell C to report its warnings to stderr
+    C.SetNoticeProcessor(ReportWarning, 0);
+
+    // Normally the database uses our notice processor, but so can we.  The
+    // trailing newline is mandatory.
+    C.ProcessNotice("Connection created\n");
+
+    // ProcessNotice() can take either a C++ string or a C-style char *.
+    const string HostName = (C.HostName() ? C.HostName() : "<local>");
+
+    C.ProcessNotice(string() +
+		    "database=" + C.DbName() + ", "
+		    "username=" + C.UserName() + ", "
+		    "hostname=" + HostName + ", "
+		    "port=" + ToString(C.Port()) + ", "
+		    "options='" + C.Options() + "', "
+		    "backendpid=" + ToString(C.BackendPID()) + "\n");
+
     // Begin a transaction acting on our current connection
     Transaction T(C, "test1");
 
     // Perform a query on the database, storing result tuples in R
     Result R( T.Exec("SELECT * FROM pg_tables") );
+
+    C.ProcessNotice(ToString(R.size()) + " result tuples.\n");
 
     // Process each successive result tuple
     for (Result::const_iterator c = R.begin(); c != R.end(); ++c)
